[package]
name = "discord-tauri"
version = "0.3.0"
description = "Discord, wrapped in Tauri."
authors = [ "DrPuc" ]
license = "GPLv3"
repository = "https://github.com/DiscordTauri/discord-tauri"
default-run = "discord-tauri"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
tauri = { version = "1.7.2", features = ["notification-all", "system-tray"] }
reqwest = { version = "0.12.7", features = ["blocking"] }
window-shadows = "0.2.2"
serde_json = "1.0.127"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
