[package]
name = "discord-tauri"
version = "0.3.0"
description = "Discord, wrapped in Tauri."
authors = [ "DrPuc" ]
license = "GPLv3"
repository = "https://github.com/DiscordTauri/discord-tauri"
default-run = "discord-tauri"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
reqwest = { version = "0.12.7", features = ["blocking"] }
serde_json = "1.0.127"
tauri-plugin-notification = "2.0.0-rc"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
