[package]
name = "discord-tauri"
version = "0.3.0"
description = "Discord, wrapped in Tauri."
authors = [ "DrPuc" ]
license = "GPLv3"
repository = "https://github.com/DiscordTauri/discord-tauri"
default-run = "discord-tauri"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
reqwest = { version = "0.12.7", features = ["blocking"] }
serde_json = "1.0.127"
tauri-plugin-notification = "2.0.0-rc"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
